@@ -2,6 +2,7 @@
 <mime-info xmlns='http://www.freedesktop.org/standards/shared-mime-info'>
   <mime-type type="application/pothos-gui">
     <comment>Pothos GUI saved topologies</comment>
+    <glob pattern="*.pothos"/>
     <glob pattern="*.pth"/>
   </mime-type>
 </mime-info>
